committing John Kraft's homework changes.
- httpd changes to httpd/conf/httpd.conf
- apache start at boot, script in init.d/httpd, links in rc*.d/*httpd
- additional pw protected kernel, see grub/menu.lst
- simple web monitor script: local/bin/webmon.sh
- cron.d/webmon has 5 minute cron entry to run webmon.sh

--- a/httpd/conf/httpd.conf
+++ b/httpd/conf/httpd.conf
@@ -16,7 +16,39 @@ LogLevel warn
 Include /etc/httpd/mods/*.load
 Include /etc/httpd/mods/*.conf
 
+#--------------------------------------------------------------------
+# * Enable support for PHP or ASP
+# I'm guessing a bit here.  first install php, which should get the
+# proper files into "mods/"...
+# Include mods/php5.load
+# Include mods/php5.conf
+#
+# but this is handled by the wildcard Includes above. I added the
+# files mods/php5.load and mods/php5.conf from a ubuntu installation
+#--------------------------------------------------------------------
+
+#--------------------------------------------------------------------
+# * (httpd.conf) Add support for users to serve content from their home
+#   directories
+#
+<IfModule mod_userdir.c>
+    UserDir disabled root
+    UserDir public_html
+</IfModule>
+#--------------------------------------------------------------------
+
+#--------------------------------------------------------------------
+# * Add a custom 404 error page
+#
+ErrorDocument 404 /etc/httpd/error/http_not_found.html
+#--------------------------------------------------------------------
+
+#--------------------------------------------------------------------
+# * Listen on port 80 and 8080
 Listen 80
+Listen 8080
+#--------------------------------------------------------------------
+
 NameVirtualHost *:80
 
 <VirtualHost *:80>
@@ -38,3 +70,28 @@ NameVirtualHost *:80
 
         LogLevel warn
 </VirtualHost>
+
+#--------------------------------------------------------------------
+# * Add a site, a default index file, and allow directory indexing for
+#   the entire site
+#
+# not entirely clear if this is what you were requesting, but here's
+# a stab:
+#
+<VirtualHost *:8080>
+
+        DocumentRoot /var/www_site2/
+        <Directory /var/www_site2/>
+		DirectoryIndex index.html index.php
+                Options Indexes
+                Options FollowSymLinks
+                AllowOverride None
+                Order allow,deny
+                allow from all
+        </Directory>
+
+        ErrorLog /var/log/httpd/error.log 
+
+        LogLevel warn
+</VirtualHost>
+#--------------------------------------------------------------------
